[gd_scene load_steps=4 format=2]

[ext_resource path="res://SplashScreen/SplashScreen.gd" type="Script" id=1]
[ext_resource path="res://SplashScreen/assets/logo-scene.png" type="Texture" id=2]
[ext_resource path="res://SplashScreen/assets/credits.png" type="Texture" id=3]

[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Credits" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 160, 90 )

[node name="Logo" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 160, 90 )

[node name="LogoToCreditsTimer" type="Timer" parent="."]
wait_time = 5.5
one_shot = true

[node name="CreditstToNextTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="LogoToCreditsTimer" to="." method="_on_LogoToCreditsTimer_timeout"]
[connection signal="timeout" from="CreditstToNextTimer" to="." method="_on_CreditstToNextTimer_timeout"]
